Fix scrollbar, again

--- a/docs/impossibletriangles/presentation.css
+++ b/docs/impossibletriangles/presentation.css
@@ -27,7 +27,7 @@
 }
 @font-face {
     font-family: "Poppins";
-    src: url('../resources/fonts/Poppins-Italic') format('truetype');
+    src: url('../resources/fonts/Poppins-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
 }
@@ -95,13 +95,13 @@
 
 
 html{
+    overflow-y: hidden !important; /* hide weird second scrollbar on chrome */
 }
 
 .grid{
     width: 100%;
     height: 100%;
     position:absolute;
-    overflow-y: hidden; /* hide weird second scrollbar on chrome */
 }
 
 
